k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: blog
  labels:
    app.kubernetes.io/name: blog
    app.kubernetes.io/managed-by: flux
