k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: blog-service
  namespace: blog
  labels:
    app: blog
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
    name: http
  selector:
    app: blog
